--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@ body{
 #box1{
     background-color: white;
     border: 2px solid white;
-    display: inline-block;
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     justify-content: center;
     margin-top: 500px;
-    margin-left: 2500px;
+    margin-left: 2340px;
+    position: absolute;
     padding: 40px;
     border-radius: 26px;
-    height: 60%;
-    width: 15%;
+    height: 62%;
+    width: 20%;
 }
 
 #box1 img{
@@ -41,8 +45,8 @@ body{
 }
 
 
-#box1 #text h3{
-    font-size: 4.3rem;
+#box1 #text h1{
+    font-size: 5.3rem;
     margin: 32px 0px;
     padding: 21px 0px;
     
@@ -50,9 +54,10 @@ body{
 }
 
 #box1 #text p{
-font-size: 3.2rem;
+font-size: 4.2rem;
     font-family: 'Outfit', sans-serif;
     color: gray;
+    margin-bottom: 105px;
 }
 
 
@@ -63,7 +68,7 @@ font-size: 3.2rem;
 <div id="box1">
     <img src="image-qr-code.png" alt="">
     <div id="text">
-        <h3>Improve your front-end <br> skills by building projects</h3>
+        <h1>Improve your front-end <br> skills by building projects</h1>
         <p>Scan the Qr code to visit Frontend <br> Mentor and take your coding skills to <br> the next level </p>
     </div>
 </div>
